🐞 fix(components): text wrap

--- a/src/components/label.less
+++ b/src/components/label.less
@@ -44,7 +44,6 @@
 
 	.value {
 		text-align: justify;
-		white-space: nowrap;
 		font-size: var(--strong);
 		color: var(--title);
 		line-height: var(--label);
